          will warn about User=/Group= settings with a non-system user/group
          specified in .netdev files for Tun/Tap interfaces. This support will
          be removed in a future release.

          Device nodes should not be owned by a non-system user/group. It is
          recommended to check udev rules files with 'udevadm verify' and/or
          'udevadm test' commands .

        New system interfaces and components:

        * The os-release(3) gained a new field FANCY_NAME= that is similar
          to PRETTY_NAME= but may contain ANSI sequences such as Unicode
          emojis. The new field is also defined to NOT contain any version
          specification, providing better separation between the OS name
          and version.

          The systemd manager, systemd-hostnamed, and hostnamectl will now
          show FANCY_NAME= in preference to PRETTY_NAME=.

        * The "Portability and Stability" policy has been simplified and
          updated to strengthen the promises of avoiding user-visible
          regressions in public interfaces. See
          https://systemd.io/PORTABILITY_AND_STABILITY/ for details.

        * Services providing a public Varlink interface can be symlinked under
          /run/varlink/registry/, allowing services to be enumerated.
          'varlinkctl list-registry' can be used to list running services.

        * A new "metrics" or "report" framework has been defined. Any component
          can hook into the reporting framework by providing a varlink endpoint
          under /run/systemd/report. Such a hookup has been added to the manager.

          systemd-report is a new command line tool which collects the reports
          from all endpoints and prints them in JSON format.

          The details of the structure of the reports should be considered
          EXPERIMENTAL at this point. We reserve the right to make incompatible
          changes to the JSON structure and/or place additional requirements.
